GNOME Bugzilla – Bug 728370
Some extractors are missing #ifdef HAVE_LIBMEDIAART
Last modified: 2014-07-07 10:36:41 UTC
tracker master and 1.0 does not build with --disable-libmediaart --enable-libvorbis
Created attachment 274517 [details] [review] Make sure vorbis extractor builds without libmediaart
Comment on attachment 274517 [details] [review] Make sure vorbis extractor builds without libmediaart Nice catch! :)
*** Bug 728494 has been marked as a duplicate of this bug. ***
Pushed.
*** Bug 730848 has been marked as a duplicate of this bug. ***
Seems this is still occuring: https://bugs.gentoo.org/attachment.cgi?id=378042
commit 3a360934d4520db279490e1c5c929aa61916ac90 Author: Martyn Russell <martyn@lanedo.com> Date: Thu Jun 5 10:08:30 2014 +0100 tracker-extract: Fix build with libav when libmediaaart is disabled https://bugzilla.gnome.org/show_bug.cgi?id=728370 This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report. This should be available in 1.0.3
I cannot find it in tracker-1.0 branch... I guess master will be used for 1.0.3 then?
(In reply to comment #8) > I cannot find it in tracker-1.0 branch... I guess master will be used for 1.0.3 > then? I will be doing a 1.1.0 release (unstable) during this week if I get the time. I may be able to get a 1.0.3 release (stable) out too with this fix.