Make sure vorbis extractor builds without libmediaart

https://bugzilla.gnome.org/show_bug.cgi?id=728370